--- a/led_app/pubspec.yaml
+++ b/led_app/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.14.0
+  firebase_database: ^10.2.3
   flutter:
     sdk: flutter
 
@@ -17,3 +19,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/light-off.png
+    - assets/light-on.png
