--- a/world_time_app/pubspec.yaml
+++ b/world_time_app/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.2.0
+  http: ^1.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +20,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
