--- a/spend_wise/pubspec.yaml
+++ b/spend_wise/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   firebase_database: ^10.2.3
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
